Fixed width on mobile (close #1)

--- a/style.css
+++ b/style.css
@@ -37,6 +37,11 @@ footer p {
 	text-align: center;
 }
 
+@media screen and (max-width: 768px){
+	main {
+		width: 100%;
+	}
+}
 
 
 
